// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/config/external/omie/Config.vue should be rendered properly 1`] = `
<div class="app-config-omie">
  <div class="app-config-omie__header">
    <div class="app-config-omie__header__title">
      <div class="app-config-omie__header__title__icon-container"><img src="https://weni-sp-push-dev.s3.sa-east-1.amazonaws.com/svg/logo-wwc.svg" class="app-config-omie__header__title__icon-container__icon"></div>
      <div class="app-config-omie__header__title__name">Weni Web Chat</div>
    </div> <span class="app-config-omie__header__description">Learn more about integrating with Omie <a href="https://ajuda.omie.com.br/pt-BR/articles/499061-obtendo-a-chave-de-acesso-para-integracoes-de-api" target="_blank" class="link">here</a></span>
  </div>
  <div class="app-config-omie__settings__content">
    <div data-v-69271fcc="" class="app-config-omie__tabs tab size-md">
      <header data-v-69271fcc="" class="tab-header">
        <ul data-v-69271fcc="" class="tab-content">
          <li data-v-69271fcc="" class="tab-head tab-head--active"> Configure </li>
        </ul>
      </header>
      <main data-v-69271fcc="" class="tab-body">
        <div data-v-69271fcc="" class="tab-panel">
          <div data-v-69271fcc="">
            <div data-v-69271fcc="" class="app-config-omie__tabs__config__content">
              <div data-v-69271fcc="" class="app-config-omie__tabs__config__content__scroll">
                <div data-v-48c0c241="" class="app-config-omie__settings__content__inputs__name unnnic-form md" data-v-69271fcc="">
                  <p data-v-48c0c241="" class="unnnic-form__label">Name</p>
                  <div data-v-400546b3="" data-v-48c0c241="" class="unnnic-form-input text-input size--md" v-bind="[object Object]" mask=""><input data-v-97b44e8c="" data-v-400546b3="" type="text" size="0" v-bind="[object Object]" placeholder="" class="input-itself input size-md normal">
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <div data-v-48c0c241="" class="app-config-omie__settings__content__inputs__key unnnic-form md" data-v-69271fcc="">
                  <p data-v-48c0c241="" class="unnnic-form__label">App Key</p>
                  <div data-v-400546b3="" data-v-48c0c241="" class="unnnic-form-input text-input size--md" v-bind="[object Object]" mask=""><input data-v-97b44e8c="" data-v-400546b3="" type="text" size="0" v-bind="[object Object]" placeholder="" class="input-itself input size-md normal">
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <div data-v-48c0c241="" class="app-config-omie__settings__content__inputs__secret unnnic-form md" data-v-69271fcc="">
                  <p data-v-48c0c241="" class="unnnic-form__label">App Secret</p>
                  <div data-v-400546b3="" data-v-48c0c241="" class="unnnic-form-input text-input size--md" v-bind="[object Object]" mask=""><input data-v-97b44e8c="" data-v-400546b3="" type="text" size="0" v-bind="[object Object]" placeholder="" class="input-itself input size-md normal">
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <div data-v-69271fcc=""></div>
              </div>
            </div>
            <div data-v-69271fcc="" class="app-config-omie__settings__buttons"><button data-v-3b3aa28c="" class="app-config-omie__settings__buttons__cancel unnnic-button unnnic-button--size-large unnnic-button--tertiary" data-v-69271fcc="">
                <!---->
                <!---->
                <!----><span data-v-3b3aa28c="" class="unnnic-button__label"> Cancel </span>
                <!----></button> <button data-v-3b3aa28c="" class="app-config-omie__settings__buttons__save unnnic-button unnnic-button--size-large unnnic-button--secondary" data-v-69271fcc="">
                <!---->
                <!---->
                <!----><span data-v-3b3aa28c="" class="unnnic-button__label"> Connect </span>
                <!----></button></div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`components/config/external/omie/Config.vue should call errorModal if update fails 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "props": Object {
          "closeText": "Close",
          "icon": "alert-circle-1",
          "position": "bottom-right",
          "scheme": "feedback-red",
          "text": "An error occurred while trying to configure the service, please try again later",
          "title": "Error",
        },
        "seconds": 6,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`components/config/external/omie/Config.vue should call updateAppConfig with desired fields 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "props": Object {
          "closeText": "Close",
          "icon": "check-circle-1-1",
          "position": "bottom-right",
          "scheme": "feedback-green",
          "text": "Successfully configured service",
          "title": "Success",
        },
        "seconds": 6,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
